# DirFusion

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: DirFusion.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs
